<resources>
    <string name="app_name">وكاله الكندوه</string>
    <string name="btD">اختار واجهتك </string>
    <string name="btB">احجز تذكرتك</string>
    <string name="btL">تسجيل الدخول</string>
    <string name="btC">اتصل بنا</string>
    <string name="country">الدوله</string>
    <string name="btS">مشاركه</string>
    <string name="destination">اختار واجهتك</string>
    <string name="departure">مغادره</string>
    <string name="country_prompt">اختار دوله</string>
    <string name="title_activity_maps">Map</string>

    <string name="book_flight">احجز تذكرتك</string>
    <string name="login">تسجيل الدخول</string>
    <string name="home">الصفحه الريئسيه</string>
    <string name="share_our">مشاركه تطبيقنا عبر</string>
    <string name="new_reg">قم بتعبئه كل الحقول</string>
    <string name="username">اسم المستخدم</string>
    <string name="password">كلمه المرور</string>
    <string name="type">النوع</string>
    <string name="send">ارسال</string>
    <string name="epassword">ادخل كلمه السر</string>
    <string name="ecountry">ادخل دولتك</string>
    <string name="eusername">ادخل كلمه المستخدم</string>
    <string name="female">انثى</string>
    <string name="male">ذكر</string>

    <string name="title_activity_article">MyTimes</string>
    <string name="article_activity_author">AUTHOR:</string>

    <string name="article_activity_source">SOURCE: Times of India</string>
    <string name="article_activity_date">DATE:</string>
    <string name="menu_title_url">url</string>
    <string name="iv_card_content_description_image">Image of the news response</string>
    <string name="collasping_image">Collasping Image</string>
    <string name="menu_title_about">About the app</string>
    <string name="tv_made_with_love_by">Made with &#9829; by</string>
    <string name="tv_made_with_tareg">Made by Tareg Safi</string>
    <string name="iv_card_my_info">My Photo</string>
    <string name="tv_libraries_used">Libraries Used</string>
    <string name="toolbar_default_text">Google News India</string>
    <string name="title_about_the_app">About the app</string>
    <string name="debajyoti_basak">Debajyoti Basak</string>
    <string name="mytimes_logo">MyTimes Logo</string>
    <string name="newsapi_tag">A beautiful News Reader powered by www.newsapi.org</string>
    <string name="material_drawer">Material Drawer</string>
    <string name="mike_penz">Mike Penz</string>
    <string name="retrofit">Retrofit</string>
    <string name="square">Square</string>
    <string name="okhttp">OkHttp</string>
    <string name="glide">Glide</string>
    <string name="bumptech">Bumptech</string>
    <string name="read_the_full_article">Read the full article</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="booking">احجز الان</string>

    <string name="title_activity_login">sign in</string>
    <string name="prompt_email">Email</string>

    <string name="prompt_phone">Phone</string>
    <string name="prompt_credit_card">Credit Card</string>


    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="prompt_flyingfrom">Flying from</string>
    <string name="prompt_flyingto">Flying to</string>
    <string name="prompt_departure_date">Departure date</string>


    <string name="prompt_return_date">Return date</string>
    <string name="prompt_traveller">Select Traveller</string>
    <string name="prompt_class">Select class</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="alert_dialog_two_buttons_title">My Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btShow">اخر العروض</string>
    <string name="btContDev">اتواصل مع المبرمج</string>
    <string-array name="editMenu">
        <item>وصول</item>
        <item>مغادره</item>
    </string-array>
    <string-array name="country_arrays">
        <item>السودان</item>
        <item>الامارات</item>
        <item>السعوديه</item>
        <item>مصر</item>
        <item>الكويت</item>
        <item>امريكا</item>
        <item>قطر</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="spinner">
        <item>TOP HEADLINES</item>
        <item>LATEST HEADLINES</item>
    </string-array>

    <string-array name="sort">
        <item>Fare</item>
        <item>Travel time</item>
    </string-array>


</resources>
