<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign">
    <TextView
        android:text="@string/username"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="84dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/new_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:id="@+id/textView6"
        android:textSize="18sp" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/textView7"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:text="@string/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textStyle="normal|bold"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:id="@+id/Submit"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:onClick="Submit"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/userForm"
        android:id="@+id/passwordForm"
        android:hint="@string/epassword"
        android:layout_alignRight="@+id/Submit"
        android:layout_alignEnd="@+id/Submit"
        android:textSize="14sp" />


    <TextView
        android:text="@string/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textStyle="normal|bold"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/gendreM"
        android:layout_alignStart="@+id/gendreM"
        android:id="@+id/countryForm"
        android:layout_alignRight="@+id/Submit"
        android:layout_alignEnd="@+id/Submit"
        android:hint="@string/ecountry" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/userForm"
        android:hint="@string/eusername"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/passwordForm"
        android:layout_alignStart="@+id/passwordForm" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView10"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:id="@+id/group">

        <RadioButton
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gendreF"
            android:layout_alignBaseline="@+id/textView10"
            android:layout_alignBottom="@+id/textView10"
            android:layout_alignLeft="@+id/gendreM"
            android:layout_alignStart="@+id/gendreM"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gendreM"
            android:layout_above="@+id/countryForm"
            android:layout_alignLeft="@+id/passwordForm"
            android:layout_alignStart="@+id/passwordForm"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp" />
    </RadioGroup>

</RelativeLayout>